[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Gustavo/BulletPlayer.gd" type="Script" id=1]
[ext_resource path="res://Assets/Spritesheets/Bullets/pop.png" type="Texture" id=2]
[ext_resource path="res://Assets/Spritesheets/Bullets/spread.png" type="Texture" id=3]
[ext_resource path="res://Assets/Spritesheets/Bullets/normal.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/NES - Contra - Effects/Contra SFX (15).wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Spritesheets/Bullets/fire.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sounds/NES - Contra - Effects/Contra SFX (8).wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Spritesheets/Bullets/machinegun.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 3.60555

[node name="BulletPlayer" type="Area2D"]
script = ExtResource( 1 )
bullet_type_sprite_node = [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 2 ) ]
bullet_hit_audio = [ ExtResource( 7 ), ExtResource( 5 ) ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -5.68434e-14, -5.68434e-14 )
scale = Vector2( 0.35, 0.35 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Position2D" type="Position2D" parent="."]

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="HitAudio" to="." method="_on_HitAudio_finished"]
